--- a/source/html/catalog.html
+++ b/source/html/catalog.html
@@ -44,6 +44,65 @@
       </form>
     </div>
     <ul class="catalog-grid">
+      <!-- kekstgramm -->
+      <li class="catalog-item" data-filter="javascript">
+        <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
+        <div class="catalog-item__img">
+          <picture>
+            <source type="image/webp" srcset="">
+            <img src="img/kekstagram.jpg" srcset="" alt="Превью kekstagram" width="358" height="578" />
+          </picture>
+        </div>
+        <div class="catalog-item__hover-menu">
+          <a href="https://askomarov.github.io/kekstagramByHTMLAcademy/" target="_blank"
+            class="catalog-item__title-link">
+            <h2 class="catalog-item__title">Кекстаграм</h2>
+          </a>
+          <p class="catalog-item__desc">Учебная работа с онлайн-курса по JavaScript</p>
+          <a href="https://askomarov.github.io/kekstagramByHTMLAcademy/" target="_blank"
+            class="catalog-item__btn main-btn">заценить</a>
+          <a class="catalog-item__site-link" href="https://askomarov.github.io/kekstagramByHTMLAcademy/"
+            target="_blank">
+            <svg width="30" height="30">
+              <use xlink:href="#icon-external-link"></use>
+            </svg>
+            <span>Ссылка на страницу</span>
+          </a>
+          <a class="catalog-item__repo-link" href="https://github.com/askomarov/kekstagramByHTMLAcademy"
+            target="_blank">
+            <svg width="30" height="30">
+              <use xlink:href="#icon-reposit"></use>
+            </svg>
+            <span>Repository</span>
+          </a>
+        </div>
+      </li>
+      <!-- keksobooking -->
+      <li class="catalog-item" data-filter="javascript">
+        <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
+        <div class="catalog-item__img">
+          <picture>
+            <source type="image/webp" srcset="">
+            <img src="img/keksobooking.jpg" srcset="" alt="Превью Кексобукинг" width="358" height="578" />
+          </picture>
+        </div>
+        <div class="catalog-item__hover-menu">
+          <a href="https://askomarov.github.io/keksobookingByHTMLAcademy/" target="_blank"
+            class="catalog-item__title-link">
+            <h2 class="catalog-item__title">Кексобукинг</h2>
+          </a>
+          <p class="catalog-item__desc">Учебная работа с онлайн-курса по JavaScript</p>
+          <a href="https://askomarov.github.io/kekstagramByHTMLAcademy/" target="_blank"
+            class="catalog-item__btn main-btn">посмотреть</a>
+          <a class="catalog-item__repo-link" href="https://askomarov.github.io/keksobookingByHTMLAcademy/"
+            target="_blank">
+            <svg width="30" height="30">
+              <use xlink:href="#icon-reposit"></use>
+            </svg>
+            <span>Repository</span>
+          </a>
+        </div>
+      </li>
       <!-- погнали -->
       <li class="catalog-item active" data-filter="html-css">
         <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
@@ -56,7 +115,7 @@
         </div>
         <div class="catalog-item__hover-menu">
           <a href="https://askomarov.github.io/pognaliHtmlAcademy/" target="_blank" class="catalog-item__title-link">
-            <h2 class="catalog-item__title">Pognali</h2>
+            <h2 class="catalog-item__title">Сайт попутчиков</h2>
           </a>
           <p class="catalog-item__desc">Адаптивный трех-страничный сайт, с огромным количеством трудоемких
             элементов, оживленный с помощью JavaScript. С использованием gulp, препроцессоров, адаптивных изображений
@@ -64,12 +123,12 @@
           <a href="https://askomarov.github.io/pognaliHtmlAcademy/" target="_blank"
             class="catalog-item__btn main-btn">view
             project</a>
-            <a class="catalog-item__repo-link" href="https://github.com/askomarov/pognaliHtmlAcademy" target="_blank">
-              <svg width="30" height="30">
-                <use xlink:href="#icon-reposit"></use>
-              </svg>
-              <span>Repository</span>
-            </a>
+          <a class="catalog-item__repo-link" href="https://github.com/askomarov/pognaliHtmlAcademy" target="_blank">
+            <svg width="30" height="30">
+              <use xlink:href="#icon-reposit"></use>
+            </svg>
+            <span>Repository</span>
+          </a>
         </div>
       </li>
       <!-- кат-энерджи -->
@@ -209,58 +268,6 @@
           <a href="https://askomarov.github.io/filter/" target="_blank" class="catalog-item__btn main-btn">view
             project</a>
           <a class="catalog-item__repo-link" href="https://github.com/askomarov/middleval" target="_blank">
-            <svg width="30" height="30">
-              <use xlink:href="#icon-reposit"></use>
-            </svg>
-            <span>Repository</span>
-          </a>
-        </div>
-      </li>
-      <!-- kekstgramm -->
-      <li class="catalog-item" data-filter="javascript">
-        <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
-        <div class="catalog-item__img">
-          <picture>
-            <source type="image/webp" srcset="">
-            <img src="img/kekstagram.jpg" srcset="" alt="Превью kekstagram" width="358" height="578" />
-          </picture>
-        </div>
-        <div class="catalog-item__hover-menu">
-          <a href="https://askomarov.github.io/kekstagramByHTMLAcademy/" target="_blank"
-            class="catalog-item__title-link">
-            <h2 class="catalog-item__title">Кекстаграм</h2>
-          </a>
-          <p class="catalog-item__desc">Учебная работа с онлайн-курса по JavaScript</p>
-          <a href="https://askomarov.github.io/kekstagramByHTMLAcademy/" target="_blank"
-            class="catalog-item__btn main-btn">заценить</a>
-          <a class="catalog-item__repo-link" href="https://github.com/askomarov/kekstagramByHTMLAcademy"
-            target="_blank">
-            <svg width="30" height="30">
-              <use xlink:href="#icon-reposit"></use>
-            </svg>
-            <span>Repository</span>
-          </a>
-        </div>
-      </li>
-      <!-- keksobooking -->
-      <li class="catalog-item" data-filter="javascript">
-        <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
-        <div class="catalog-item__img">
-          <picture>
-            <source type="image/webp" srcset="">
-            <img src="img/keksobooking.jpg" srcset="" alt="Превью Кексобукинг" width="358" height="578" />
-          </picture>
-        </div>
-        <div class="catalog-item__hover-menu">
-          <a href="https://askomarov.github.io/keksobookingByHTMLAcademy/" target="_blank"
-            class="catalog-item__title-link">
-            <h2 class="catalog-item__title">Кексобукинг</h2>
-          </a>
-          <p class="catalog-item__desc">Учебная работа с онлайн-курса по JavaScript</p>
-          <a href="https://askomarov.github.io/kekstagramByHTMLAcademy/" target="_blank"
-            class="catalog-item__btn main-btn">посмотреть</a>
-          <a class="catalog-item__repo-link" href="https://askomarov.github.io/keksobookingByHTMLAcademy/"
-            target="_blank">
             <svg width="30" height="30">
               <use xlink:href="#icon-reposit"></use>
             </svg>
