--- a/source/html/skills.html
+++ b/source/html/skills.html
@@ -42,9 +42,9 @@
           <use xlink:href="#logos_figma"></use>
         </svg>
       </li>
-      <li class="skills__item skills__item--more">
+      <!-- <li class="skills__item skills__item--more">
         <span class="skills__item-more"></span>
-      </li>
+      </li> -->
     </ul>
   </div>
 </section>
