--- a/source/html/catalog.html
+++ b/source/html/catalog.html
@@ -1,4 +1,5 @@
 <section class="catalog">
+  <a name="catalog"></a>
   <div class="catalog__container container">
 
     <div class="catalog__filter catalog-filter">
@@ -61,13 +62,13 @@
           <p class="catalog-item__desc">Учебная работа с онлайн-курса по JavaScript</p>
           <a href="https://askomarov.github.io/kekstagramByHTMLAcademy/" target="_blank"
             class="catalog-item__btn main-btn">заценить</a>
-          <a class="catalog-item__site-link" href="https://askomarov.github.io/kekstagramByHTMLAcademy/"
+          <!-- <a class="catalog-item__site-link" href="https://askomarov.github.io/kekstagramByHTMLAcademy/"
             target="_blank">
             <svg width="30" height="30">
               <use xlink:href="#icon-external-link"></use>
             </svg>
             <span>Ссылка на страницу</span>
-          </a>
+          </a> -->
           <a class="catalog-item__repo-link" href="https://github.com/askomarov/kekstagramByHTMLAcademy"
             target="_blank">
             <svg width="30" height="30">
