--- a/source/html/promo.html
+++ b/source/html/promo.html
@@ -10,7 +10,7 @@
       Artem Komarov
     </h1>
     <p class="promo__text">
-      Frontend-разработчик
+      J. Frontend-developer
     </p>
 
   </div>
