--- a/source/html/header.html
+++ b/source/html/header.html
@@ -12,10 +12,10 @@
 
       <ul class="header-menu__site-list site-list">
         <li class="site-list__item">
-          <a class="site-list__link">Пункт 1</a>
+          <a href="#skills" class="site-list__link">Навыки</a>
         </li>
         <li class="site-list__item">
-          <a class="site-list__link">Пункт 2</a>
+          <a href="#catalog" class="site-list__link">Каталог</a>
         </li>
         <li class="site-list__item">
           <a class="site-list__link">Пункт 3</a>
