--- a/source/html/skills.html
+++ b/source/html/skills.html
@@ -1,4 +1,5 @@
 <section class="skills">
+  <a name="skills"></a>
   <div class="skills__container container">
     <h2 class="skills__title main-title">Навыки и инструменты, которыми владею</h2>
     <ul class="skills__list">
