--- a/source/index.html
+++ b/source/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body class="page">
+  <a name="link-on-top"></a>
   @@include('html/svg-sprite.html')
 
   @@include('html/header.html')
@@ -21,21 +22,13 @@
     @@include('html/skills.html')
 
     @@include('html/catalog.html')
+    <a href="#link-on-top" class="link-on-top">
+      <span class="link-to-top__ball"></span>
+    </a>
   </main>
 
   @@include('html/footer.html')
-  <svg class="waves" viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
-    <defs>
-      <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"></path>
-    </defs>
-    <g class="waves-animation">
-      <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7)"></use>
-      <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)"></use>
-      <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)"></use>
-      <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff"></use>
-    </g>
-  </svg>
-  <script type="module" src="js/main.min.js"></script>
+  <script src="js/main.bundle.js"></script>
 </body>
 
 </html>
