баг футер тянул разметку убрал, доработки

--- a/source/html/footer.html
+++ b/source/html/footer.html
@@ -1,35 +1,40 @@
 <footer class="footer">
   <div class="footer__container container">
     <a href="index.html" class="footer__logo">
-      <svg width="128" height="24" role="img" aria-label="текстовый логотип CatEnergy">
+      <svg width="128" height="48" role="img" aria-label="логотип aslogo">
         <use xlink:href="#aslogo"></use>
       </svg>
     </a>
     <ul class="footer__social">
       <li class="footer__social-item">
-        <a href="" class="footer__social-link footer__social-link--vk">
-          <span class="visually-hidden">Vkontakte</span>
-          <svg width="28" height="20">
+        <a href="" class="footer__social-link" aria-label="Vkontakte">
+          <svg width="56" height="40">
             <use xlink:href="#icon-vk"></use>
           </svg>
         </a>
       </li>
       <li class="footer__social-item">
-        <a href="https://github.com/askomarov" class="footer__social-link footer__social-link--fb">
-          <span class="visually-hidden">github</span>
-          <svg width="20" height="20">
+        <a href="https://github.com/askomarov" class="footer__social-link" aria-label="github">
+          <svg width="40" height="40">
             <use xlink:href="#github-logo"></use>
           </svg>
         </a>
       </li>
       <li class="footer__social-item">
-        <a href="" class="footer__social-link footer__social-link--inst">
-          <span class="visually-hidden">instagram</span>
-          <svg width="20" height="20">
+        <a href="" class="footer__social-link" aria-label="instagram">
+          <svg width="40" height="40">
             <use xlink:href="#icon-inst"></use>
           </svg>
         </a>
       </li>
+      <li class="footer__social-item">
+        <a href="" class="footer__social-link" aria-label="telegram">
+          <svg width="40" height="40">
+            <use xlink:href="#icon-telegram"></use>
+          </svg>
+        </a>
+      </li>
+
 
     </ul>
     <!-- <div class="footer__copy">
@@ -40,6 +45,7 @@
       </a>
     </div> -->
   </div>
+  <!-- волны -->
   <svg class="waves" viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
     <defs>
       <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"></path>
