--- a/source/html/header.html
+++ b/source/html/header.html
@@ -38,7 +38,7 @@
         </a>
       </li> -->
       <li class="header-actions__item">
-        <a class="header-actions__link header-actions__link--tg" target="_blank" href="https://t.me/askomarov">
+        <a class="header-actions__link header-actions__link--tg" target="_blank" href="https://t.me/askomarov" aria-label="telegram">
           <svg width="17" height="17">
             <use xlink:href="#icon-telegram"></use>
           </svg>
