--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MyPotfolio</title>
+  <link rel="shortcut icon" href="img/icons/icon-art.png" type="image">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
