--- a/source/html/promo.html
+++ b/source/html/promo.html
@@ -1,5 +1,5 @@
 <section class="promo">
-  <div class="promo__container">
+  <div class="promo__container container">
     <div class="promo__img-wrap">
       <picture>
         <source srcset="img/askomarov.webp" type="image/webp">
