--- a/source/html/svg-sprite.html
+++ b/source/html/svg-sprite.html
@@ -1,4 +1,9 @@
 <svg style="display: none">
+  <symbol id="icon-npm" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0H24V24H0V0Z" fill="#D40001" />
+    <path fill-rule="evenodd" clip-rule="evenodd" d="M16.718 7.928H12.205V20.25H4V3H20V20.249H16.718V7.93V7.928Z"
+      fill="white" />
+  </symbol>
   <symbol id="icon-vue" viewBox="0 0 16 16">
     <path d="M12.2 1.9625H15L8 14.0375L1 1.9625H6.355L8 4.7625L9.61 1.9625H12.2Z" fill="#41B883" />
     <path d="M1 1.9625L8 14.0375L15 1.9625H12.2L8 9.2075L3.765 1.9625H1Z" fill="#41B883" />
