--- a/source/html/skills.html
+++ b/source/html/skills.html
@@ -1,46 +1,78 @@
 <section class="skills">
   <a name="skills"></a>
   <div class="skills__container container">
-    <h2 class="skills__title main-title">Навыки и инструменты, которыми владею</h2>
+    <h2 class="skills__title main-title">I can work with</h2>
     <ul class="skills__list">
-      <li class="skills__item">html
+      <li class="skills__item">
+        <span>
+          html
+        </span>
         <svg>
           <use xlink:href="#html"></use>
         </svg>
       </li>
-      <li class="skills__item">css
+      <li class="skills__item">
+        <span>
+          css
+        </span>
         <svg>
           <use xlink:href="#css"></use>
         </svg>
       </li>
-      <li class="skills__item">scss
+      <li class="skills__item">
+        <span>
+          scss
+        </span>
         <svg>
           <use xlink:href="#scss"></use>
         </svg>
       </li>
-      <li class="skills__item">js
+      <li class="skills__item">
+        <span>
+          js
+        </span>
         <svg>
           <use xlink:href="#logos_javascript"></use>
         </svg>
       </li>
-      <li class="skills__item">gulp
+      <li class="skills__item">
+        <span>
+          gulp
+        </span>
         <svg>
           <use xlink:href="#logos_gulp"></use>
         </svg>
       </li>
-      <li class="skills__item">github
+      <li class="skills__item">
+        <span>
+          github
+        </span>
         <svg>
           <use xlink:href="#github-logo"></use>
         </svg>
       </li>
-      <li class="skills__item">jquery
+      <li class="skills__item">
+        <span>
+          jquery
+        </span>
         <svg>
           <use xlink:href="#logos_jquery"></use>
         </svg>
       </li>
-      <li class="skills__item">figma
+      <li class="skills__item">
+        <span>
+          figma
+        </span>
         <svg>
           <use xlink:href="#logos_figma"></use>
+        </svg>
+      </li>
+      <li class="skills__item">
+        <span>
+          npm
+        </span>
+        <svg>
+          <use xlink:href="#icon-npm"></use>
         </svg>
       </li>
       <!-- <li class="skills__item skills__item--more">
