не много анимации

--- a/source/html/header.html
+++ b/source/html/header.html
@@ -1,4 +1,4 @@
-<header class="header header--no-js">
+<header class="header">
   <div class="header__body container">
 
     <a class="header__logo">
