--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
-<body class="page">
+<body class="page no-js">
   <a name="link-on-top"></a>
   @@include('html/svg-sprite.html')
 
