--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MyPotfolio</title>
+  <title>Askomarov - MyPotfolio</title>
+  <meta name="description" content="Artem Komarov portfolio site">
   <link rel="shortcut icon" href="img/icons/icon-art.png" type="image">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
