--- a/source/html/catalog.html
+++ b/source/html/catalog.html
@@ -46,7 +46,7 @@
 
       </form>
     </div>
-    <ul class="catalog-list">
+    <ul class="catalog-list catalog-list--html">
       <!-- погнали -->
       <li class="catalog-item active" data-filter="html-css">
         <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
@@ -202,7 +202,7 @@
         </div>
       </li> -->
     </ul>
-    <ul class="catalog-list">
+    <ul class="catalog-list catalog-list--js">
       <!-- kekstgramm -->
       <li class="catalog-item" data-filter="javascript">
         <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
