--- a/source/html/promo.html
+++ b/source/html/promo.html
@@ -1,6 +1,6 @@
 <section class="promo">
   <div class="promo__container container">
-    <div class="promo__img-wrap">
+    <!-- <div class="promo__img-wrap"> -->
 
       <div class="promo__btn-wrap">
         <input class="visually-hidden" id="profile" name="profile" type="checkbox">
@@ -34,7 +34,8 @@
       </div>
 
 
-    </div>
+    <!-- </div> -->
+
     <h1 class="promo__title">
       Artem Komarov
     </h1>
