правки промо, доработал меню бургер

--- a/source/html/header.html
+++ b/source/html/header.html
@@ -8,7 +8,9 @@
     </a>
 
     <nav class="header__menu header-menu">
-      <button type="button" class="header-menu__toggle" aria-label="открыть меню" aria-expanded="false">menu</button>
+      <button type="button" class="header-menu__toggle" aria-label="открыть меню" aria-expanded="false">
+        <span class="header-menu__icon"></span>
+      </button>
 
       <ul class="header-menu__site-list site-list">
         <li class="site-list__item">
@@ -38,7 +40,8 @@
         </a>
       </li> -->
       <li class="header-actions__item">
-        <a class="header-actions__link header-actions__link--tg" target="_blank" href="https://t.me/askomarov" aria-label="telegram">
+        <a class="header-actions__link header-actions__link--tg" target="_blank" href="https://t.me/askomarov"
+          aria-label="telegram">
           <svg width="17" height="17">
             <use xlink:href="#icon-telegram"></use>
           </svg>
