--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  @@include('html/yandex-metrika.html')
   <title>Askomarov - MyPotfolio</title>
   <meta name="description" content="Artem Komarov portfolio site">
   <link rel="shortcut icon" href="img/icons/icon-art.png" type="image">
