убрал анимацию фона, стилизация скролла каталога

--- a/source/html/catalog.html
+++ b/source/html/catalog.html
@@ -80,6 +80,30 @@
         <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
         <div class="catalog-item__img">
           <picture>
+            <img src="img/komarov-way-2.png" alt="Превью сайт о путешесвтиях" width="358" height="578" />
+          </picture>
+        </div>
+        <div class="catalog-item__hover-menu">
+          <a href="https://askomarov.github.io/komarov_way/" target="_blank" class="catalog-item__title-link">
+            <h2 class="catalog-item__title">Сайт о вариантах путешествий</h2>
+          </a>
+          <p class="catalog-item__desc">Адаптивный страница. С использованием gulp, препроцессоров,
+            адаптивных изображений. Не много JavaScript</p>
+          <a href="https://askomarov.github.io/komarov_way/" target="_blank" class="catalog-item__btn main-btn">view
+            project</a>
+          <a class="catalog-item__repo-link" href="https://github.com/askomarov/komarov_way" target="_blank">
+            <svg width="30" height="30">
+              <use xlink:href="#icon-reposit"></use>
+            </svg>
+            <span>Repository</span>
+          </a>
+        </div>
+      </li>
+      <!-- кат-энерджи -->
+      <li class="catalog-item active" data-filter="html-css">
+        <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
+        <div class="catalog-item__img">
+          <picture>
             <source type="image/webp" srcset="img/img-catenergy.webp 1x, img/img-catenergy@2x.webp 2x">
             <img src="img/img-catenergy.jpg" srcset="img/img-catenergy@2x.jpg 2x" alt="Превью сайт питание для кошек"
               width="358" height="578" />
