правки, оптимизация картинок, добавил еще одну работу

--- a/source/html/catalog.html
+++ b/source/html/catalog.html
@@ -75,7 +75,7 @@
           </a>
         </div>
       </li>
-      <!-- кат-энерджи -->
+      <!-- way -->
       <li class="catalog-item active" data-filter="html-css">
         <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
         <div class="catalog-item__img">
@@ -87,11 +87,34 @@
           <a href="https://askomarov.github.io/komarov_way/" target="_blank" class="catalog-item__title-link">
             <h2 class="catalog-item__title">Сайт о вариантах путешествий</h2>
           </a>
-          <p class="catalog-item__desc">Адаптивный страница. С использованием gulp, препроцессоров,
+          <p class="catalog-item__desc">Адаптивная страница. С использованием gulp, препроцессоров,
             адаптивных изображений. Не много JavaScript</p>
           <a href="https://askomarov.github.io/komarov_way/" target="_blank" class="catalog-item__btn main-btn">view
             project</a>
           <a class="catalog-item__repo-link" href="https://github.com/askomarov/komarov_way" target="_blank">
+            <svg width="30" height="30">
+              <use xlink:href="#icon-reposit"></use>
+            </svg>
+            <span>Repository</span>
+          </a>
+        </div>
+      </li>
+      <!-- mishka -->
+      <li class="catalog-item active" data-filter="html-css">
+        <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
+        <div class="catalog-item__img">
+          <picture>
+            <img src="img/mishka-preview.png" alt="Превью сайт вязанные вещи ручной работы" width="358" height="578" />
+          </picture>
+        </div>
+        <div class="catalog-item__hover-menu">
+          <a href="https://askomarov.github.io/komarov_way/" target="_blank" class="catalog-item__title-link">
+            <h2 class="catalog-item__title">Сайт о вариантах путешествий</h2>
+          </a>
+          <p class="catalog-item__desc">Адаптивный трех-страничный mobile-first сайт. С использованием сборки gulp, препроцессора Sass. Не много JavaScript</p>
+          <a href="https://askomarov.github.io/mishka/" target="_blank" class="catalog-item__btn main-btn">view
+            project</a>
+          <a class="catalog-item__repo-link" href="https://github.com/askomarov/mishka" target="_blank">
             <svg width="30" height="30">
               <use xlink:href="#icon-reposit"></use>
             </svg>
