блок предложение со сменой слов

--- a/source/html/catalog.html
+++ b/source/html/catalog.html
@@ -1,5 +1,5 @@
 <section class="catalog">
-  <a name="catalog"></a>
+  <a id="catalog"></a>
   <div class="catalog__container container">
 
     <div class="catalog__filter catalog-filter">
