--- a/source/html/skills.html
+++ b/source/html/skills.html
@@ -1,7 +1,19 @@
 <section class="skills">
-  <a name="skills"></a>
+  <a id="skills"></a>
+
+
   <div class="skills__container container">
-    <h2 class="skills__title main-title">I can work with</h2>
+    <!-- <h2 class="skills__title main-title">I can work with</h2> -->
+    <div class="skills__change-text change-text-wrap">
+      <h2 class="main-title">I can work with &nbsp;</h2>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Javascript</li>
+        <li>Fast Speed</li>
+        <li>Asesome Quality</li>
+      </ul>
+    </div>
     <ul class="skills__list">
       <li class="skills__item">
         <span>
