изменил текст меняющегося текста, слишком длинный ломает

--- a/source/html/skills.html
+++ b/source/html/skills.html
@@ -11,7 +11,7 @@
         <li>CSS</li>
         <li>Javascript</li>
         <li>Fast Speed</li>
-        <li>Asesome Quality</li>
+        <li>High Quality</li>
       </ul>
     </div>
     <ul class="skills__list">
