убрал в js module header-menu функции хедера, оптимизация изображений

--- a/source/html/catalog.html
+++ b/source/html/catalog.html
@@ -80,7 +80,7 @@
         <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
         <div class="catalog-item__img">
           <picture>
-            <img src="img/komarov-way-2.png" alt="Превью сайт о путешесвтиях" width="358" height="578" />
+            <img src="img/komarov-way-2.jpg" alt="Превью сайт о путешесвтиях" width="358" height="578" />
           </picture>
         </div>
         <div class="catalog-item__hover-menu">
@@ -104,7 +104,7 @@
         <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
         <div class="catalog-item__img">
           <picture>
-            <img src="img/mishka-preview.png" alt="Превью сайт вязанные вещи ручной работы" width="358" height="578" />
+            <img src="img/mishka-preview.jpg" alt="Превью сайт вязанные вещи ручной работы" width="358" height="578" />
           </picture>
         </div>
         <div class="catalog-item__hover-menu">
@@ -155,7 +155,7 @@
         <div class="catalog-item__img">
           <picture>
             <source type="image/webp" srcset="img/img-gllacy.webp 1x, img/img-gllacy@2x.webp 2x">
-            <img src="img/img-gllacy.png" srcset="img/img-gllacy@2x.jpg" alt="Превью сайта салон красоты Barber-shop"
+            <img src="img/img-gllacy.jpg" srcset="img/img-gllacy@2x.jpg" alt="Превью сайта салон красоты Barber-shop"
               width="358" height="578" />
           </picture>
         </div>
